force-app/main/default/objects/Account_Relationship__x/Account_Relationship__x.object-meta.xml
<CustomObject>
    <description>Customer to account relationships</description>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>AccountRelationship</externalName>
    <label>Account Relationship</label>
    <pluralLabel>Account Relationships</pluralLabel>
</CustomObject>