force-app/main/default/objects/Account_Relationship__x/fields/Asset_Finance_AMBIT__c.field-meta.xml
<CustomField>
    <fullName>Asset_Finance_AMBIT__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Associated Id Of AMBIT</description>
    <externalDeveloperName>AMBITId</externalDeveloperName>
    <label>Asset Finance AMBIT</label>
    <length>255</length>
    <referenceTo>Asset_Finance_AMBIT__x</referenceTo>
    <relationshipLabel>Account Relationships</relationshipLabel>
    <relationshipName>Account_Relationships</relationshipName>
    <type>ExternalLookup</type>
</CustomField>