force-app/main/default/objects/Account_Relationship__x/fields/Asset_Finance_AMBIT_Contract__c.field-meta.xml
<CustomField>
    <fullName>Asset_Finance_AMBIT_Contract__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Lookup to Asset Finance AMBIT Contract</description>
    <externalDeveloperName>AFAMBITContractNumber</externalDeveloperName>
    <label>Asset Finance AMBIT Contract</label>
    <length>255</length>
    <referenceTo>Asset_Finance_AMBIT_Contract__x</referenceTo>
    <relationshipLabel>Account Relationships</relationshipLabel>
    <relationshipName>Account_Relationships</relationshipName>
    <type>ExternalLookup</type>
</CustomField>