force-app/main/default/objects/Account_Relationship__x/fields/Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Credit Card</description>
    <externalDeveloperName>CreditCard</externalDeveloperName>
    <label>Credit Card</label>
    <length>255</length>
    <referenceTo>Credit_Card__x</referenceTo>
    <relationshipLabel>Account Relationships</relationshipLabel>
    <relationshipName>Account_Relationships</relationshipName>
    <type>ExternalLookup</type>
</CustomField>