force-app/main/default/objects/Account_Relationship__x/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Indirect Lookup to Customer(Account) object</description>
    <externalDeveloperName>Customer</externalDeveloperName>
    <label>Related Customer</label>
    <length>255</length>
    <referenceTargetField>Account.External_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Relationships</relationshipLabel>
    <relationshipName>Account_Relationships</relationshipName>
    <type>IndirectLookup</type>
</CustomField>