force-app/main/default/objects/Account_Relationship__x/fields/Demand_Account__c.field-meta.xml
<CustomField>
    <fullName>Demand_Account__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_CACHE</complianceGroup>
    <description>Demand Deposit Account lookup</description>
    <externalDeveloperName>DemandAccount</externalDeveloperName>
    <label>Deposit Account</label>
    <length>18</length>
    <referenceTo>Demand_Account__x</referenceTo>
    <relationshipLabel>Account Relationships</relationshipLabel>
    <relationshipName>Account_Relationships</relationshipName>
    <type>ExternalLookup</type>
</CustomField>