force-app/main/default/objects/Account_Relationship__x/fields/Deposit_Account__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Deposit Account lookup</description>
    <externalDeveloperName>DepositAccount</externalDeveloperName>
    <label>Deposit Account</label>
    <length>18</length>
    <referenceTo>Deposit_Account__x</referenceTo>
    <relationshipLabel>Account Relationships</relationshipLabel>
    <relationshipName>Account_Relationships</relationshipName>
    <type>ExternalLookup</type>
</CustomField>