force-app/main/default/objects/Account_Relationship__x/fields/Liability_Account__c.field-meta.xml
<CustomField>
    <fullName>Liability_Account__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CACHE</complianceGroup>
    <description>Liability Account Lookup</description>
    <externalDeveloperName>LiabilityAccount</externalDeveloperName>
    <label>Liability Account</label>
    <length>18</length>
    <referenceTo>Liability_Account__x</referenceTo>
    <relationshipLabel>Account Relationships</relationshipLabel>
    <relationshipName>Account_Relationships</relationshipName>
    <type>ExternalLookup</type>
</CustomField>