force-app/main/default/objects/Account_Relationship__x/fields/Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>Loan_Account__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Loan Account lookup</description>
    <externalDeveloperName>LoanAccount</externalDeveloperName>
    <label>Loan Account</label>
    <length>18</length>
    <referenceTo>Loan_Account__x</referenceTo>
    <relationshipLabel>Account Relationships</relationshipLabel>
    <relationshipName>Account_Relationships</relationshipName>
    <type>ExternalLookup</type>
</CustomField>