force-app/main/default/objects/Account_Relationship__x/fields/Other_Limits_and_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Other_Limits_and_Liabilities__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>External lookup with OLL</description>
    <externalDeveloperName>OLLId</externalDeveloperName>
    <label>Other Limits and Liabilities</label>
    <length>255</length>
    <referenceTo>Other_Limits_and_Liabilities__x</referenceTo>
    <relationshipLabel>Account Relationships</relationshipLabel>
    <relationshipName>Account_Relationships</relationshipName>
    <type>ExternalLookup</type>
</CustomField>