force-app/main/default/objects/Account_Relationship__x/fields/Portfolio_Of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Of_Loan__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Associated Id of PTF</description>
    <externalDeveloperName>PortfolioOfLoanId</externalDeveloperName>
    <label>Portfolio Of Loan</label>
    <length>18</length>
    <referenceTo>Portfolio_of_Loan__x</referenceTo>
    <relationshipLabel>Account Relationships</relationshipLabel>
    <relationshipName>Account_Relationships</relationshipName>
    <type>ExternalLookup</type>
</CustomField>