force-app/main/default/objects/Account_Relationship__x/fields/Related_Party_Names__c.field-meta.xml
<CustomField>
    <fullName>Related_Party_Names__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Related customer names</description>
    <externalDeveloperName>RelatedPartyNames</externalDeveloperName>
    <label>Related Party Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>