force-app/main/default/objects/Account_Relationship__x/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Relationship type</description>
    <externalDeveloperName>Relationship</externalDeveloperName>
    <label>Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>