force-app/main/default/objects/Account_Relationship__x/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Sequence</description>
    <externalDeveloperName>Sequence</externalDeveloperName>
    <label>Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>