force-app/main/default/objects/Account_Relationship__x/fields/Term_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Term_Deposit__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Term Deposit account lookup</description>
    <externalDeveloperName>TermDepositId</externalDeveloperName>
    <label>Term Deposit</label>
    <length>18</length>
    <referenceTo>Term_Deposit__x</referenceTo>
    <relationshipLabel>Account Relationships</relationshipLabel>
    <relationshipName>Account_Relationships</relationshipName>
    <type>ExternalLookup</type>
</CustomField>